--- a/alerts/nginx-ingress-gke/metadata.yaml
+++ b/alerts/nginx-ingress-gke/metadata.yaml
@@ -1,7 +1,7 @@
 alert_policy_templates:
   - id: "connections-dropped"
     display_name: "NGINX Ingress Controller - Prometheus - Connections Dropped"
-    description: ""
+    description: "The connections dropped value is derived from the connections accepted minus the connections handled. This value should be near 0. When this value is rising, it means you may have a resource saturation problem."
     version: 1
   - id: "high-request-rate"
     display_name: "NGINX Ingress Controller - Prometheus - High Request Rate"
